tree-sitter-grammar/test/corpus/comments.txt
================================================================================
Comment only line
================================================================================
; this is a comment
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (comment))))

================================================================================
Instruction with comment
================================================================================
HLT ; stop execution
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier)))
      (comment))))

================================================================================
Label with comment
================================================================================
start: ; entry point
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (label_definition
        (identifier))
      (comment))))

================================================================================
Directive with comment
================================================================================
.byte #0x00 ; null byte
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (directive
        (directive_name)
        (immediate_value
          (hex_number)))
      (comment))))

================================================================================
Full statement with comment
================================================================================
.text start: LDI R0, #0x00 ; initialize
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (header_directive)
      (label_definition
        (identifier))
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (immediate_value
            (hex_number))))
      (comment))))

================================================================================
Comment with semicolons
================================================================================
; comment with ; semicolons ;
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (comment))))
