tree-sitter-grammar/test/corpus/directives.txt
================================================================================
Text section directive
================================================================================
.text
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (header_directive))))

================================================================================
Data section directive
================================================================================
.data
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (header_directive))))

================================================================================
IRQ section directive
================================================================================
.irq
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (header_directive))))

================================================================================
Byte directive with value
================================================================================
.byte #0x05
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (directive
        (directive_name)
        (immediate_value
          (hex_number))))))

================================================================================
Short directive with value
================================================================================
.short #0xFF00
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (directive
        (directive_name)
        (immediate_value
          (hex_number))))))

================================================================================
Zero directive
================================================================================
.zero #0x0A
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (directive
        (directive_name)
        (immediate_value
          (hex_number))))))

================================================================================
Org directive with single value
================================================================================
.org #0x50
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (directive
        (directive_name)
        (immediate_value
          (hex_number))))))

================================================================================
Org directive with two values
================================================================================
.org #0x50, #0xFF
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (directive
        (directive_name)
        (immediate_value
          (hex_number))
        (immediate_value
          (hex_number))))))

================================================================================
String directive
================================================================================
.string "hello"
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (directive
        (directive_name)
        (string_literal)))))

================================================================================
String directive with escapes
================================================================================
.string "say \"hi\" and \\"
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (directive
        (directive_name)
        (string_literal)))))

================================================================================
Label with directive
================================================================================
msg: .string "test"
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (label_definition
        (identifier))
      (directive
        (directive_name)
        (string_literal)))))
