tree-sitter-grammar/test/corpus/edge_cases.txt
================================================================================
Whitespace before hash
================================================================================
LDI R0, # 0x05
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (immediate_value
            (hex_number)))))))

================================================================================
Whitespace in label
================================================================================
abc :
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (label_definition
        (identifier)))))

================================================================================
Whitespace in directive
================================================================================
. text
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (header_directive))))

================================================================================
Underscore identifier
================================================================================
_start:
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (label_definition
        (identifier)))))

================================================================================
Identifier with numbers
================================================================================
loop1:
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (label_definition
        (identifier)))))

================================================================================
Mixed case directive
================================================================================
.TEXT
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (header_directive))))

================================================================================
Mixed case data directive
================================================================================
.Data
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (header_directive))))

================================================================================
Multi-digit register
================================================================================
MOV R10, R15
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (register))))))

================================================================================
Multiple lines
================================================================================
.text
start: LDI R0, #0x00
HLT
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (header_directive)))
  (line
    (statement
      (label_definition
        (identifier))
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (immediate_value
            (hex_number))))))
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))))))

================================================================================
Full program
================================================================================
.text
    LDI R0, start
    LDX R1, [r0]
    HLT
.data
    start: .byte #0x01
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (header_directive)))
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (identifier)))))
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (memory_address
            (memory_operand
              (register)))))))
  (line
    (statement
      (instruction
        (mnemonic
          (identifier)))))
  (line
    (statement
      (header_directive)))
  (line
    (statement
      (label_definition
        (identifier))
      (directive
        (directive_name)
        (immediate_value
          (hex_number))))))
