tree-sitter-grammar/test/corpus/instructions.txt
================================================================================
No operand instruction
================================================================================
HLT
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))))))

================================================================================
Single register operand
================================================================================
INC R0
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))))))

================================================================================
Two register operands
================================================================================
MOV R1, R2
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (register))))))

================================================================================
Register and immediate
================================================================================
LDI R0, #0xFF
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (immediate_value
            (hex_number)))))))

================================================================================
Register and label
================================================================================
LDI R0, start
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (identifier))))))

================================================================================
Register and memory address
================================================================================
LDX R0, [#0x50]
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (memory_address
            (memory_operand
              (immediate_value
                (hex_number)))))))))

================================================================================
Lowercase register
================================================================================
mov r0, r1
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (register))))))

================================================================================
Mixed case
================================================================================
Mov R0, r1
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (register))))))
