tree-sitter-grammar/test/corpus/memory.txt
================================================================================
Direct hex address
================================================================================
LDX R0, [#0x0C]
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (memory_address
            (memory_operand
              (immediate_value
                (hex_number)))))))))

================================================================================
Label address
================================================================================
LDX R0, [data]
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (memory_address
            (memory_operand
              (identifier))))))))

================================================================================
Label with positive offset
================================================================================
LDX R0, [data+#0x05]
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (memory_address
            (memory_operand
              (identifier)
              (immediate_value
                (hex_number)))))))))

================================================================================
Label with negative offset
================================================================================
LDX R0, [data-#0x05]
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (memory_address
            (memory_operand
              (identifier)
              (immediate_value
                (hex_number)))))))))

================================================================================
Register address
================================================================================
LDX R0, [R1]
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (memory_address
            (memory_operand
              (register))))))))

================================================================================
Register with offset
================================================================================
LDX R0, [R1+#0x01]
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (memory_address
            (memory_operand
              (register)
              (immediate_value
                (hex_number)))))))))

================================================================================
Lowercase register in memory
================================================================================
LDX R0, [r1+#0x01]
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (memory_address
            (memory_operand
              (register)
              (immediate_value
                (hex_number)))))))))
