tree-sitter-grammar/test/corpus/statements.txt
================================================================================
Empty line
================================================================================


--------------------------------------------------------------------------------

(source_file
  (line))

================================================================================
Label only
================================================================================
start:
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (label_definition
        (identifier)))))

================================================================================
Instruction only
================================================================================
HLT
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (instruction
        (mnemonic
          (identifier))))))

================================================================================
Label with instruction
================================================================================
loop: JMP loop
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (label_definition
        (identifier))
      (instruction
        (mnemonic
          (identifier))
        (operand
          (identifier))))))

================================================================================
Header directive with label and instruction
================================================================================
.text start: LDI R0, #0x00
--------------------------------------------------------------------------------

(source_file
  (line
    (statement
      (header_directive)
      (label_definition
        (identifier))
      (instruction
        (mnemonic
          (identifier))
        (operand
          (register))
        (operand
          (immediate_value
            (hex_number)))))))
